2004-09-04 Juergen Haas <juergenhaas@gmx.net>

	*fixed graphical representation of parts
	*added gerb_transf_rotate
	*added gerb_transf_shift  
	*fixed segfault when searching in comments
	*designator is also shown checked by default

2004-08-28 Juergen Haas <juergenhaas@gmx.net>

	*fixed GTK1 compilation issues


2004-08-27 Juergen Haas <juergenhaas@gmx.net>

 	*fixed memory issues pnp_state 
 	*fixed too many calls to screen_for_delimiter
 	*added #include "string.h" to gerb_transf.c
 	*introduced update_combo_box_model()
 	*removed unnecessary code
	*"beautified" gerb_transf.[ch]	
	*introduced rectangular shape for marking rectangular parts
	*introduced a LOG MEssage, when right click on any selected part (must be in active selection)

2004-08-26  Juergen Haas <juergenhaas@gmx.net>

	*small bugfixes
	*added double click draws selected item on screen

2004-08-25  Tomasz Motylewski <t.motylewski@bfad.de>

	* eliminated memory leak MINGW32 gerb_file.c fd->data
	* forced LC_NUMERIC to "C" in parse_gerb(), fixing
	  bug resulting in very thin lines (aperture size = 0)
	  under GTK2

2004-08-23  Tomasz Motylewski <t.motylewski@bfad.de>

	* cleaned up memory allocation in gerb_image.c
	* improved project loading (still broken, there is no clear
	design which function should do what).
	* fixed memory leak plist_top->filename

2004-08-23  Juergen Haas <juergenhaas@gmx.net>
	-saving projects:
	is done in a more flexible way:
	adds a similar line with "filename" replaced by "pick_and_place" 
	to project file
FIX ME: reading in a project file is still broken 
	-several bugfixes: 
	 upon pressing mark button in select parts dialog it always updates
	 screen
	
2004-08-23  Tomasz Motylewski <t.motylewski@bfad.de>

	* replaced scale with gerb_transf_t(.scale) - mirroring preparation

2004-08-22  Stefan Petersen  <spe@stacken.kth.se>

	* configure.in, src/Makefile.am: Use libpng-config to find out
	  parameters to use in CFLAGS and LIBS.

tag:SEARCH_SELECT_merged
