@@ -24,10 +24,18 @@ You will need to download the following files:
          Here is a filelist I have downloaded, in principle everything which
          is not labelled "crucial ONLY for compiling gimp" should be included:
           (all of these are zipped archives, so beware where you put them, they
-          should end up in the MINGW path, you can recognise the top direc-
-          tories listed in the archive in the mingw tree)
+          should end up in the MINGW path, you can recognise the top directories 
+	 listed in the archive in the mingw tree)
+
+IMPORTANT BUILD NOTES:
+./rebuild_conf script is broken, at the moment due to GTK1 check...
+work around: use ./rebuild_conf under linux then copy dir to windows
+
+you MUST edit src/Makefile after ./configure --enable-gtk2 and  edit  AM_CFLAGS line:
+AM_CFLAGS = -Wall -mms-bitfields -mno-cygwin 
    
-list of archives to be downloaded for gtk2:  
+
+Here is a list of archives to be downloaded for gtk2:  
 
 glib-2.4.5.zip. Runtime of GLib 2.4.5. Requires libiconv and gettext-runtime.
 glib-dev-2.4.5.zip. Corresponding developer package, i.e. headers, import libraries and documentation.
