@@ -8,17 +8,7 @@
 extern "C" {
 #endif
 
-#ifndef LIBMBA_API
-#ifdef WIN32
-# ifdef LIBMBA_EXPORTS
-#  define LIBMBA_API  __declspec(dllexport)
-# else /* LIBMBA_EXPORTS */
-#  define LIBMBA_API  __declspec(dllimport)
-# endif /* LIBMBA_EXPORTS */
-#else /* WIN32 */
 # define LIBMBA_API extern
-#endif /* WIN32 */
-#endif /* LIBMBA_API */
 
 #include <stdio.h>
 /*#include "text.h"*/
